<resources>

    <string name="app_name"></string>

    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="image_place">Image from the Place</string>
    <string name="map_button">Map Button</string>
    <string name="add_comment">Add Comment</string>
    <string name="send">Send</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="no_login">Error: No login entered</string>
    <string name="no_password">Error: No password entered</string>
    <string name="unable_login">Error: Wrong login/password</string>

    <string name="please_wait">Please wait</string>
    <string name="spinner_Title">ActionBar Spinner</string>

    <!-- Strings related to Search Activity -->
    <string name="search_activity_title"></string>
    <string name="favorite_button_title">Favorites</string>
    <string name="profile_button_title">Profile</string>
    <string name="search_geolocation_button_desc">Button to show restaurants on the indicated radius</string>
    <string name="search_clear_button_desc">Button to clear the text on the search text input</string>
    <string name="search_search_text_input_hint">Search &#8230;</string>
    <string name="search_search_radius_text_view">Search radius</string>
    <string name="search_radius_km_text_view">1 km</string>
    <string name="search_search_button">Search</string>
    <string name="search_recent_searches">Recent Searches</string>
    <string name="search_search_keyboard_button">Search</string>
    <string name="title_activity_login">Sign in</string>
    <string name="search_no_locations_found">No food locals were found</string>
    <string name="search_recent_longitude">Lon</string>
    <string name="search_recent_latitude">Lat</string>
    <string name="search_recent_radius">Radius</string>
    <string name="search_recent_is_empty_error">Search text is empty!</string>
    <string name="longitude_abbreviation">Lon</string>
    <string name="latitude_abbreviation">Lat</string>
    <string name="radius_abbreviation">Radius</string>
    <string name="all_types">ALL</string>
    <string name="only_open">ONLY OPEN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_favorites"></string>


    <string name="take_picture">Take picture</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="description">Description</string>
    <string name="accept_terms">Accept terms and conditions</string>
    <string name="fields_empty">All fields must be filled for registering, including the picture</string>
    <string name="registered">You\'ve been registered successfuly</string>
    <string name="error_repeat_email">The email you\'re trying to register with already exists</string>
    <string name="password_mismatch">The passwords you\'ve entered do not match</string>
    <string name="terms_not_accepted">You must accept the terms and conditions for registering</string>
    <string name="save">Save</string>
    <string name="edit">Edit profile</string>
    <string name="information_updated_success">Updated successfuly</string>
    <string name="information_update_error">Could not update the information correctly</string>

    <string name="unable_comment">You must add a comment to send it</string>
    <string name="comments">Comments</string>
    <string name="title_activity_maps">Map</string>
    <string name="email_empty">Please write your email!</string>
    <string name="password_empty">Please type in a password!</string>


</resources>
