<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ctx="pprog2.salleurl.edu.practica_pprog2.activities.SearchActivity"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/search_layout"
        android:focusableInTouchMode="true"
        android:focusable="true">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/search_geolocation_button_desc"
            app:srcCompat="@android:drawable/ic_menu_mylocation"
            android:onClick="onClickSearchGeolocationButton"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="200">

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_search_text_input_hint"
                android:inputType="text"
                android:imeOptions="actionSearch"/>
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/search_clear_button_desc"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            android:onClick="onClickSearchClearButton"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/search_layout"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/search_search_radius_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_search_radius_text_view" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="10"
            android:layout_weight="4"/>

        <TextView
            android:id="@+id/search_radius_km_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_radius_km_text_view" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/search_search_button"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:onClick="onClickSearchByTextButton"/>

    <TextView
        android:id="@+id/search_recent_searches_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_recent_searches"
        android:layout_above="@+id/search_recent_searches_list_view"
        android:layout_alignParentStart="true" />

    <ListView
        android:id="@+id/search_recent_searches_list_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:text="@string/search_activity_title" />


</RelativeLayout>
