<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ctx="edu.salleurl.pprog2.demopractiques.MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:maxWidth="40dp"
        android:maxHeight="40dp"
        android:layout_marginBottom="74dp"
        app:srcCompat="@mipmap/plat" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_below="@id/iv_logo"
        android:layout_centerInParent="true"
        android:id="@+id/loginLayout"
        android:hint="@string/username">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/login" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginLayout"
        android:layout_marginTop="15dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="60dp"
        android:hint="@string/password"
        android:layout_marginEnd="60dp"
        android:id="@+id/passwordLayout">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:onClick="onLoginButtonClick"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart = "@+id/btn_login"
        android:layout_below = "@+id/btn_login"
        android:layout_marginTop="15dp"
        android:onClick="onRegisterButtonClick"
        android:text="@string/register" />

</RelativeLayout>
