<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/layoutimage">

            <ImageView
                android:id="@+id/image_place"
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:backgroundTint="@color/colorAccent"
                android:contentDescription="@string/image_place"
                android:cropToPadding="false"
                android:scaleType="fitXY" />
        </LinearLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/favButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="end"
            android:layout_marginTop="96dp"
            android:clickable="true"
            app:fabSize="normal"
            android:onClick="onFavButtonClick"
            app:srcCompat="@drawable/favorite_empty" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_below="@id/layoutimage"
            android:id="@+id/place_name"
            android:fontFamily="Roboto"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/place_name"
            android:layout_marginStart="10dp"
            android:id="@+id/rating_layout"
            android:orientation="horizontal">
            <RatingBar
                android:id="@+id/rating_stars"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="3"
                android:layout_centerVertical="true"
                android:progressTint="@color/black" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/map_button"
                app:srcCompat="@drawable/map_button"
                android:onClick="onMapButtonClick"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="15dp"
            android:layout_below="@id/rating_layout"
            android:id="@+id/placeDescription"
            android:textSize="18sp"
            android:textColor="@color/dark_gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:id="@+id/comments_title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_below="@id/placeDescription"
            android:text="@string/comments"/>
        <ListView
            android:id="@+id/listview_comments"
            android:layout_below="@id/comments_title"
            android:layout_marginStart="10dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="140dp" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="40dp"
            android:layout_below="@id/listview_comments"
            android:layout_centerInParent="true"
            android:id="@+id/add_comment_layout"
            android:hint="@string/add_comment">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:id="@+id/add_comment" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="end"
            android:text="@string/send"
            android:layout_below="@+id/add_comment_layout"
            android:layout_alignEnd="@+id/add_comment_layout"
            android:onClick="onSendButtonClick"/>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
